src/flake8_pytest_style/snapshots/ruff__flake8_pytest_style__tests__PT010.snap
---
source: src/flake8_pytest_style/mod.rs
expression: checks
---
- kind:
    RaisesWithoutException: ~
  location:
    row: 5
    column: 9
  end_location:
    row: 5
    column: 22
  fix: ~
  parent: ~

