src/flake8_pytest_style/snapshots/ruff__flake8_pytest_style__tests__PT015.snap
---
source: src/flake8_pytest_style/mod.rs
expression: checks
---
- kind:
    AssertAlwaysFalse: ~
  location:
    row: 9
    column: 4
  end_location:
    row: 9
    column: 15
  fix: ~
  parent: ~
- kind:
    AssertAlwaysFalse: ~
  location:
    row: 10
    column: 4
  end_location:
    row: 10
    column: 16
  fix: ~
  parent: ~
- kind:
    AssertAlwaysFalse: ~
  location:
    row: 11
    column: 4
  end_location:
    row: 11
    column: 12
  fix: ~
  parent: ~
- kind:
    AssertAlwaysFalse: ~
  location:
    row: 12
    column: 4
  end_location:
    row: 12
    column: 14
  fix: ~
  parent: ~
- kind:
    AssertAlwaysFalse: ~
  location:
    row: 13
    column: 4
  end_location:
    row: 13
    column: 13
  fix: ~
  parent: ~
- kind:
    AssertAlwaysFalse: ~
  location:
    row: 14
    column: 4
  end_location:
    row: 14
    column: 14
  fix: ~
  parent: ~
- kind:
    AssertAlwaysFalse: ~
  location:
    row: 15
    column: 4
  end_location:
    row: 15
    column: 13
  fix: ~
  parent: ~
- kind:
    AssertAlwaysFalse: ~
  location:
    row: 16
    column: 4
  end_location:
    row: 16
    column: 13
  fix: ~
  parent: ~
- kind:
    AssertAlwaysFalse: ~
  location:
    row: 17
    column: 4
  end_location:
    row: 17
    column: 13
  fix: ~
  parent: ~
- kind:
    AssertAlwaysFalse: ~
  location:
    row: 18
    column: 4
  end_location:
    row: 18
    column: 17
  fix: ~
  parent: ~
- kind:
    AssertAlwaysFalse: ~
  location:
    row: 19
    column: 4
  end_location:
    row: 19
    column: 16
  fix: ~
  parent: ~
- kind:
    AssertAlwaysFalse: ~
  location:
    row: 20
    column: 4
  end_location:
    row: 20
    column: 18
  fix: ~
  parent: ~
- kind:
    AssertAlwaysFalse: ~
  location:
    row: 21
    column: 4
  end_location:
    row: 21
    column: 17
  fix: ~
  parent: ~
- kind:
    AssertAlwaysFalse: ~
  location:
    row: 22
    column: 4
  end_location:
    row: 22
    column: 22
  fix: ~
  parent: ~
- kind:
    AssertAlwaysFalse: ~
  location:
    row: 23
    column: 4
  end_location:
    row: 23
    column: 19
  fix: ~
  parent: ~
- kind:
    AssertAlwaysFalse: ~
  location:
    row: 24
    column: 4
  end_location:
    row: 24
    column: 21
  fix: ~
  parent: ~
- kind:
    AssertAlwaysFalse: ~
  location:
    row: 25
    column: 4
  end_location:
    row: 25
    column: 20
  fix: ~
  parent: ~

