src/flake8_pytest_style/snapshots/ruff__flake8_pytest_style__tests__PT021.snap
---
source: src/flake8_pytest_style/mod.rs
expression: checks
---
- kind: FixtureFinalizerCallback
  location:
    row: 49
    column: 4
  end_location:
    row: 49
    column: 42
  fix: ~
  parent: ~
- kind: FixtureFinalizerCallback
  location:
    row: 56
    column: 4
  end_location:
    row: 56
    column: 42
  fix: ~
  parent: ~

