src/flake8_pytest_style/snapshots/ruff__flake8_pytest_style__tests__PT022.snap
---
source: src/flake8_pytest_style/mod.rs
expression: checks
---
- kind:
    UselessYieldFixture: error
  location:
    row: 17
    column: 4
  end_location:
    row: 17
    column: 18
  fix: ~
  parent: ~

